--- a/hms_admin/templates/hms_admin/admin_home.html
+++ b/hms_admin/templates/hms_admin/admin_home.html
@@ -1,5 +1,9 @@
 {% extends 'hms_admin/admin_master.html' %}
+{% load static %}
+
 
 {% block content %}
+
 <p class="welcome">Welcome Admin</p> 
-{% endblock %}
+   
+    {% endblock %}
