--- a/receptionist/templates/receptionist/registration.html
+++ b/receptionist/templates/receptionist/registration.html
@@ -53,14 +53,14 @@
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
 
-                                            <label class="form-label" for="form3Example1m1">DOB</label>
+                                            <label class="form-label" for="form3Example1m1">Age</label>
                                             <input type="text" id="form3Example1m1"
                                                 class="form-control form-control-lg" />
                                         </div>
                                     </div>
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
-                                            <label class="form-label" for="form3Example1n1"> Age </label>
+                                            <label class="form-label" for="form3Example1n1"> BLood Group </label>
                                             <input type="text" id="form3Example1n1"
                                                 class="form-control form-control-lg" />
                                           
