--- a/common/static/css/style.css
+++ b/common/static/css/style.css
@@ -463,6 +463,12 @@ a:focus {
   position: relative;
 }
 
+.bg-2 {
+  background: url("../images/bg/22.jpg") no-repeat 50% 50%;
+  background-size: cover;
+  position: relative;
+}
+
 .banner {
   position: relative;
   overflow: hidden;
