--- a/receptionist/templates/receptionist/rec_home.html
+++ b/receptionist/templates/receptionist/rec_home.html
@@ -24,6 +24,10 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href=" {% static 'css/style.css' %}">
 
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+
     {% block header %}
     <!-- Add style tag for individual pages  -->
     {% endblock %}
@@ -77,15 +81,17 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Patient Details <i
                                     class="icofont-thin-down"></i></a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown02">
-                                <li><a class="dropdown-item" href="{% url 'receptionist:search' %}">Search Patient</a></li>
+                                <li><a class="dropdown-item" href="{% url 'receptionist:search' %}">Search Patient</a>
+                                </li>
                                 <li><a class="dropdown-item" href="{% url 'receptionist:reg' %}"> Registration </a></li>
                             </ul>
                         </li>
 
-                        <li class="nav-item"><a class="nav-link" href="{% url 'receptionist:app-list' %}">Appointments</a>
-						</li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="{% url 'receptionist:app-list' %}">Appointments</a>
+                        </li>
 
-                      
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="{% url 'patient:appointment' %}" id="dropdown03"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Doctors <i
@@ -97,6 +103,12 @@
                             </ul>
                         </li>
 
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'com-home' %}"> <span class="material-symbols-rounded">
+                                    logout
+                                </span> </a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -106,7 +118,7 @@
 
     {% block content %}
 
-  
+
     <section class="page-title bg-1">
         <div class="overlay"></div>
         <div class="container">
